# SciImager

./: .gitignore  CMakeLists.txt  ImgProcTest.sce  Test.sce  VisualIpcvEditor.sci
BaseProcessors/BaseProcessors/: StringConcatProcessor.cpp  SumProcessor.cpp  SumProcessor.hpp
BaseProcessors/BaseProcessors.xcodeproj/: project.pbxproj
ImageProcessors/ImageProcessors/: FaceDetectProcessor.cpp  ImageCropProcessor.cpp  ImagePropertiesProcessor.cpp
ImageProcessors/ImageProcessors.xcodeproj/: project.pbxproj
Native/: CMakeLists.txt  SciImager.sln  VisualIPCV.sln
Native/BaseProcessors/: CMakeLists.txt
Native/BaseProcessors/Math/MulProcessor/: MulProcessor.cpp  MulProcessor.hpp
Native/BaseProcessors/VectorBrakers/Vector2Brake/: Vector2Brake.cpp  Vector2Brake.hpp  Vector2Break.cpp  Vector2Break.hpp
Native/BaseProcessors/VectorBrakers/Vector3Brake/: Vector3Brake.cpp  Vector3Brake.hpp  Vector3Break.cpp  Vector3Break.hpp
Native/BaseProcessors/VectorBrakers/Vector4Brake/: Vector4Break.cpp  Vector4Break.hpp
Native/BaseProcessors/VectorBrakers/VectorBrakeBase/: VectorBrakeBase.cpp  VectorBrakeBase.hpp  VectorBreakBase.cpp  VectorBreakBase.hpp
Native/ImageProcessors/: CMakeLists.txt
Native/OpenCvTest/: OpenCvTest.cpp  OpenCvTest.vcxproj  OpenCvTest.vcxproj.filters
Native/PropertyProcessors/: CMakeLists.txt
Native/SciImager/: DllExport.h  SciImager.vcxproj  SciImager.vcxproj.filters  pch.h
Native/VisualIPCV/: AverageBlur.cpp  AverageBlur.hpp  BaseDataType.cpp  BaseDataType.hpp  BaseDataTypeClassifier.hpp  BilateralBlur.cpp  CMakeLists.txt  CoincidenceChecker.cpp  CoincidenceChecker.hpp  CvtColorProcessor.cpp  DataBundle.cpp  DataBundle.hpp  DataTypeJ.cpp  DataTypeJ.hpp  DataValue.hpp  DistanceTransformProcessor.cpp  DllExport.h  DoublePropertyProcessor.cpp  DrawLandmarks.hpp  FaceDetectProcessor.cpp  FaceDetectProcessor.hpp  FacialLandmarkDetection.cpp  FacialLandmarkDetection.hpp  GaussianBlurProcessor.cpp  ImageCropProcessor.cpp  ImagePropertiesProcessor.cpp  ImagePropertyProcessor.cpp  ImagePropertyProcessor.hpp  IntegerPropertyProcessor.cpp  Logger.cpp  Logger.hpp  MedianBlurProcessor.cpp  MedianBlurProcessor.hpp  NormalizeProcessor.cpp  NormalizeProcessor.hpp  Processor.cpp  Processor.hpp  ProcessorManager.cpp  ProcessorManager.hpp  ProcessorProperty.cpp  (+20 more)
Native/VisualIpcvJava/: CMakeLists.txt  DataBundleJNIModel.hpp  DataTypeJNIModel.hpp  DataTypeJNIObject.cpp  DataTypeJNIObject.hpp  DataTypesManager.cpp  DataTypesManager.hpp  JNIHelper.cpp  JNIHelper.hpp  JNIManager.cpp  JNIManager.hpp  PluginsLoader.cpp  PluginsLoader.hpp  PrimitiveTypeClassifier.hpp  PrimitiveTypeСlassifier.hpp  VisualIpcvJava.vcxproj  VisualIpcvJava.vcxproj.filters  com_visualipcv_DataTypeLibrary.cpp  com_visualipcv_DataTypeLibrary.h  com_visualipcv_NativeProcessor.cpp  com_visualipcv_NativeProcessor.h  com_visualipcv_ProcessorLibrary.cpp  com_visualipcv_ProcessorLibrary.h  dllmain.cpp  pch.h
Native/VisualIpcvSci/: DllExport.h  SciImager.h  ScilabMain.cpp  VisualIpcvSci.filters  VisualIpcvSci.vcxproj  pch.h
Native/VisualIpcvTest/: CMakeLists.txt  haarcascade_frontalface_alt2.xml  main.cpp
ProperyProcessors/ProperyProcessors.xcodeproj/: project.pbxproj
Saves/: Segments  facial landmark
VisualIpcvEditor/: build.gradle  settings.gradle
(+466 files in other folders)
